<resources>
    <string name="app_name">delicieux</string>
    <string name="splash">splash image</string>
    <string name="explore_icon">Explore</string>
    <string name="shopping_icon">Shopping list</string>
    <string name="favourite_icon">Favourite</string>
    <string name="profile_icon">Profile</string>
    <string name="login">Login</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_btn">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">Create account</string>
    <string name="recipe_button">Shortpreview Video</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="forgot_pw">Forget password?</string>
    <string name="recipe">Recipes</string>
    <string name="cookbook">Cookbooks</string>
    <string name="editprofile">Edit Profile</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="remove">Remove</string>
    <string name="albanian">Albanian</string>
    <string name="english">English</string>
    <string name="changepsw">Change Password</string>
    <string name="language">Language</string>
    <string name="log_out">Log Out</string>
    <string name="done">Done</string>
    <string name="edit_profile">Edit profile</string>
    <string name="upload_image">Upload Image</string>
    <string name="username">Username</string>
    <string name="email">Email Address</string>
    <string name="phone_number">Phone Number</string>

</resources>