<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="Login"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="normal" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:background="@drawable/white_boarder"
            android:elevation="10dp"
            android:outlineAmbientShadowColor="@android:color/darker_gray"
            tools:targetApi="p">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/colorPrimaryDark"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/colorPrimaryDark"
                android:textStyle="bold"
                app:met_baseColor="@color/colorPrimaryDark"
                app:met_floatingLabel="normal"
                app:met_textColor="@color/colorPrimaryDark" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:background="@drawable/white_boarder"
            android:elevation="10dp"
            android:outlineAmbientShadowColor="@android:color/darker_gray"
            tools:targetApi="p">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/colorPrimaryDark"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColorHint="@color/colorPrimaryDark"
                android:textStyle="bold"
                app:met_baseColor="@color/colorPrimaryDark"
                app:met_floatingLabel="normal"
                app:met_textColor="@color/colorPrimaryDark" />
        </FrameLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:indeterminateTint="@color/colorPrimary"
            android:visibility="gone"
            tools:targetApi="lollipop" />


        <Button
            android:id="@+id/btnLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginLeft="70dp"
            android:layout_marginEnd="70dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/btn_style"
            android:text="@string/login_btn"
            android:textColor="@color/white"
            android:textSize="15sp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/forget"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="12sp"
            android:linksClickable="true"
            android:text="@string/forgot_pw"
            android:textColor="@color/white"
            android:textStyle="normal" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>